# numasec

./: .gitignore  CHANGELOG.md  Containerfile  INSTALL.md  README.md  UPSTREAM_LOG.md  docker-compose.yml  install.sh  numasec-mcp.sh  pyproject.toml  pytest.ini  requirements.txt  smithery.json
.github/: FUNDING.yml  copilot-instructions.md
.github/workflows/: ci.yml  docker-publish.yml  numasec-scan.yml  publish.yml  release.yml  upstream-sync.yml
agent/: flake.nix  install  package.json
agent/infra/: console.ts  stage.ts
agent/nix/: node_modules.nix
agent/script/: changelog.ts  publish.ts  release  stats.ts  sync-zed.ts  version.ts
agent/script/github/: close-issues.ts
agent/sdks/vscode/: README.md  package.json
community-templates/: README.md  cookie-security.yaml  cors-permissive.yaml  debug-endpoints.yaml  exposed-admin.yaml  security-headers.yaml  server-info-disclosure.yaml
docs/: ANALYSIS.md  ARCHITECTURE.md
numasec/: __init__.py  worker.py
numasec/cli/: __init__.py  ci_mode.py  templates.py
numasec/core/: coverage.py  http.py
numasec/mcp/: _security.py  mcp_session_store.py  server.py  state_tools.py  tool_bridge.py
numasec/reporting/: markdown.py  sarif.py
numasec/scanners/: _base.py  _envelope.py  _plugin.py  auth_tester.py  command_injection_tester.py  cors_tester.py  crawler.py  crlf_tester.py  csrf_tester.py  cve_enricher.py  dir_fuzzer.py  graphql_tester.py  host_header_tester.py  idor_tester.py  js_analyzer.py  lfi_tester.py  nosql_tester.py  open_redirect_tester.py  openapi_parser.py  race_tester.py  shodan.py  sqli_tester.py  ssrf_tester.py  ssti_tester.py  subdomain_scanner.py  upload_tester.py  vuln_scanner.py  xss_tester.py  xxe_tester.py
numasec/standards/: cvss_vectors.py  cwe_mapping.py  owasp.py
numasec/tools/: __init__.py  browser_fallback.py  browser_tool.py  composite_injection.py  composite_recon.py  http_tool.py  oob_tool.py
src/numasec/: __init__.py  __main__.py  agent.py  attack_graph.py  chains.py  cli.py  config.py  cost_tracker.py  demo.py  mcp_resources.py  mcp_server.py  mcp_tools.py  pdf_report.py  planner.py  plugins.py  renderer.py  report.py  router.py  session.py  state.py  theme.py
src/numasec/prompts/: system.md
src/numasec/standards/: __init__.py  cvss.py  cwe_mapping.py  owasp.py
src/numasec/tools/: __init__.py  browser.py  exploit.py  recon.py
tests/: test_agent.py  test_attack_graph.py  test_ci_mode.py  test_community_templates.py  test_crlf_tester.py  test_http_factory.py  test_mcp_resources.py  test_mcp_server.py  test_mcp_tools.py  test_pdf_report.py  test_planner.py  test_race_tester.py  test_scanners.py  test_security_fixes.py  test_standards.py  test_upload_tester.py  test_v2_scanners.py  test_worker_ping.py
tests/benchmarks/: __init__.py  conftest.py  ground_truth.py  scorer.py  test_dvwa.py  test_juice_shop.py
