# NumaSec — AI Security Testing for Apps
# Modern Python packaging (PEP 621)

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "numasec"
version = "3.0.0"
description = "AI security testing for apps. Paste a URL, get a full security report. Like having a pentester on your team for $0.12."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Francesco Stabile", email = "francesco.stabile.dev@gmail.com" }
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
keywords = [
    "security",
    "security-testing",
    "ai-security",
    "web-security",
    "app-security",
    "vulnerability-scanner",
    "security-check",
    "vibe-security",
    "ai",
    "llm",
    "deepseek",
    "claude",
    "pentesting",
    "cybersecurity",
    "playwright",
]

dependencies = [
    # CLI
    "rich>=13.7.0",
    "prompt-toolkit>=3.0.43",
    
    # AI Providers (httpx used directly for streaming)
    "httpx>=0.27.0",
    
    # Browser Automation (XSS testing, screenshots)
    "playwright>=1.40.0",
    
    # Utilities
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.9.0",
    "ruff>=0.3.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
]

[project.scripts]
numasec = "numasec.__main__:main"

[project.urls]
Homepage = "https://github.com/FrancescoStabile/numasec"
Documentation = "https://github.com/FrancescoStabile/numasec/blob/main/docs/ARCHITECTURE.md"
Repository = "https://github.com/FrancescoStabile/numasec"
Issues = "https://github.com/FrancescoStabile/numasec/issues"
Changelog = "https://github.com/FrancescoStabile/numasec/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/numasec"]
include = [
    "src/numasec/**/*.md",
    "src/numasec/**/*.txt",
]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
]

# ══════════════════════════════════════════════════════════════════════════════
# Tool Configuration
# ══════════════════════════════════════════════════════════════════════════════

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["numasec"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
